# MCSTP

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
python/: pyproject.toml  test_session.py
python/src/mcstp/: __init__.py  actions.py  state.py
src/client/java/com/mcstp/: MCSTPClient.java
src/client/java/com/mcstp/action/handlers/: ClickHandler.java  CursorHandler.java
src/client/java/com/mcstp/config/: MCSTPConfig.java  MCSTPConfigScreen.java  ModMenuIntegration.java
src/client/java/com/mcstp/item/: ItemCategorizer.java  ItemCategory.java
src/client/java/com/mcstp/state/: CombatContextInfo.java  GameStatePayload.java  HeldItemInfo.java  InventoryInfo.java  MCSTPStateProvider.java  NearbyEntitiesInfo.java  PlayerInputInfo.java  PlayerStateInfo.java  ScreenStateInfo.java  StatusEffectInfo.java  ThreatInfo.java
src/client/resources/: mcstp.client.mixins.json
src/main/java/com/mcstp/: MCSTPMod.java
src/main/resources/: fabric.mod.json  mcstp.mixins.json
