[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcstp"
version = "1.0.0"
description = "Python client for Minecraft State Transfer Protocol — typed game state dataclasses for MCCTP"
requires-python = ">=3.10"
dependencies = [
    "mcctp>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
